@@ -5,23 +5,23 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class ActionComposeeTest {
 
+    // Classe factice pour simuler des actions simples
     private static class FakeAction extends Action {
         private final float valeur;
     
         public FakeAction(String libelle, float valeur) {
             super(libelle);
-            if (libelle == null || libelle.isBlank()) {
-                throw new IllegalArgumentException("libelle invalide");
+            if (libelle == null || libelle.trim().isEmpty()) {
+                throw new IllegalArgumentException("libelle ne doit pas être nul ou vide");
             }
             this.valeur = valeur;
         }
-        
+    
         @Override
         public float valeur(Jour j) {
             return valeur;
         }
     }
-    
 
     @Test
     void testCreationEtValeurActionComposee() {
@@ -33,34 +33,55 @@ class ActionComposeeTest {
         ac.ajouterComposant(a2, 0.4f);
 
         assertEquals("CompoA1A2", ac.getLibelle());
-
-        float expected = 80f;
-        float actual = ac.valeur(null);
-        assertEquals(expected, actual, 0.0001f);
+        assertEquals(80f, ac.valeur(null), 0.0001f);
     }
-
 
     @Test
     void testEchecCreationSiLibelleInvalide() {
-        Exception ex1 = assertThrows(IllegalArgumentException.class, () -> {
-            new FakeAction(null, 100f);
-        });
+        assertThrows(IllegalArgumentException.class, () -> new FakeAction(null, 100f));
+        assertThrows(IllegalArgumentException.class, () -> new FakeAction("", 100f));
+        assertThrows(IllegalArgumentException.class, () -> new FakeAction("   ", 100f));
+        assertThrows(IllegalArgumentException.class, () -> new ActionComposee("   "));
+    }
 
-        Exception ex2 = assertThrows(IllegalArgumentException.class, () -> {
-            new FakeAction("", 100f);
-        });
+    @Test
+    void testAjouterComposantAvecPoidsInvalide() {
+        Action a = new FakeAction("A", 100f);
+        ActionComposee ac = new ActionComposee("Test");
 
-        Exception ex3 = assertThrows(IllegalArgumentException.class, () -> {
-            new FakeAction("   ", 100f);
-        });
+        assertThrows(IllegalArgumentException.class, () -> ac.ajouterComposant(a, 0f));
+        assertThrows(IllegalArgumentException.class, () -> ac.ajouterComposant(a, -1f));
+    }
 
-        Exception ex4 = assertThrows(IllegalArgumentException.class, () -> {
-            new ActionComposee("  ");
-        });
+    @Test
+    void testAjouterComposantDeuxFois() {
+        Action a = new FakeAction("A", 200f);
+        ActionComposee ac = new ActionComposee("Double");
 
-        assertTrue(ex1.getMessage().contains("libelle"));
-        assertTrue(ex2.getMessage().contains("libelle"));
-        assertTrue(ex3.getMessage().contains("libelle"));
-        assertTrue(ex4.getMessage().contains("libelle"));
+        ac.ajouterComposant(a, 0.5f);
+        ac.ajouterComposant(a, 0.25f); // doit remplacer le précédent poids
+
+        assertEquals(50f, ac.valeur(null), 0.0001f);
+    }
+
+    @Test
+    void testToStringEtGetLibelle() {
+        ActionComposee ac = new ActionComposee("TestLabel");
+        assertEquals("TestLabel", ac.getLibelle());
+        assertEquals("TestLabel", ac.toString());
+    }
+
+    @Test
+    void testValeurAvecPlusieursComposants() {
+        Action a1 = new FakeAction("A1", 10f);
+        Action a2 = new FakeAction("A2", 20f);
+        Action a3 = new FakeAction("A3", 30f);
+
+        ActionComposee ac = new ActionComposee("Multi");
+        ac.ajouterComposant(a1, 0.1f); // 1
+        ac.ajouterComposant(a2, 0.3f); // 6
+        ac.ajouterComposant(a3, 0.6f); // 18
+
+        assertEquals(25f, ac.valeur(null), 0.0001f);
     }
 }
